tdf#93188 - avoid crash in media player.

ToggleFloatingMode can be run during dispose, and should handle that,
thanks to Maxim Monastirsky for the analysis.

Change-Id: I72c5aff9b75fa2c1b6795e239370244dafdafae2
Reviewed-on: https://gerrit.libreoffice.org/17931
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>